--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ng-icons/core": "^27.2.0",
+    "@ng-icons/iconsax": "^27.2.0",
     "@ngrx/signals": "^17.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
