--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,5 @@ testem.log
 .DS_Store
 Thumbs.db
 
-./src/environments/environment.prod.ts
+src/environments/environment.prod.ts
+src/environments/environment.ts
