--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-icons/core": "^27.2.0",
     "@ng-icons/iconsax": "^27.2.0",
     "@ngrx/signals": "^17.1.1",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
@@ -41,6 +42,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
+    "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "7.2.0",
