--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@ng-icons/core": "^27.2.0",
+    "@ng-icons/heroicons": "^27.2.0",
     "@ng-icons/iconsax": "^27.2.0",
     "@ngrx/signals": "^17.1.1",
     "jwt-decode": "^4.0.0",
