--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-icons/iconsax": "^27.2.0",
     "@ngrx/signals": "^17.1.1",
     "jwt-decode": "^4.0.0",
+    "luxon": "^3.4.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
@@ -45,6 +46,7 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.0",
+    "@types/luxon": "^3.4.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
