--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.4.4",
+    "ngx-markdown": "^17.2.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1",
