--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-icons/heroicons": "^27.3.1",
     "@ng-icons/iconsax": "^27.3.1",
     "@ngrx/signals": "^17.2.0",
+    "apollo-angular": "^6.0.0",
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.4.4",
@@ -48,6 +49,7 @@
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
     "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.4",
     "@types/luxon": "^3.4.2",
