--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^17.3.5",
     "@angular/router": "^17.3.5",
     "@apollo/client": "^3.9.11",
+    "@formkit/auto-animate": "^0.8.2",
     "@ng-icons/core": "^27.3.1",
     "@ng-icons/heroicons": "^27.3.1",
     "@ng-icons/iconsax": "^27.3.1",
