--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -1,6 +1,12 @@
 name: Code Quality checks
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+      - main
+  pull_request:
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
