--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "noUnusedParameters": true,
+    "strictNullChecks": true,
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
