--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "@ngrx/signals": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^17.2.0",
-    "apollo-angular": "^6.0.0",
+    "apollo-angular": "^7.0.0",
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.4.4",
-    "ngx-markdown": "^17.2.0",
+    "ngx-markdown": "^17.2.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1",
@@ -52,17 +52,18 @@
     "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.5",
-    "@commitlint/cli": "^19.2.2",
+    "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ngrx/schematics": "^17.2.0",
+    "@parcel/watcher": "^2.4.1",
     "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.4",
     "@types/luxon": "^3.4.2",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "7.7.0",
-    "@typescript-eslint/parser": "7.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "autoprefixer": "^10.4.19",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
