--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ng-icons/iconsax": "^27.3.1",
     "@ngrx/effects": "^17.2.0",
     "@ngrx/entity": "^17.2.0",
+    "@ngrx/operators": "^17.2.0",
     "@ngrx/signals": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^17.2.0",
