--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,8 @@
     "esbenp.prettier-vscode",
     "cyrilletuzi.angular-schematics",
     "graphql.vscode-graphql",
-    "bradlc.vscode-tailwindcss"
+    "bradlc.vscode-tailwindcss",
+    "nrwl.angular-console",
+    "dbaeumer.vscode-eslint"
   ]
 }
