--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint",
+    "start": "nx serve",
+    "build": "nx build",
+    "watch": "nx build --watch --configuration development",
+    "test": "nx test",
+    "lint": "nx lint",
     "lint:format": "prettier . --check",
-    "lint:eslint": "ng lint",
+    "lint:eslint": "nx lint",
     "format": "prettier . --write",
     "codegen": "graphql-codegen --config codegen.ts"
   },
@@ -47,6 +47,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.6",
+    "@angular-devkit/core": "^17.3.6",
+    "@angular-devkit/schematics": "^17.3.6",
     "@angular-eslint/builder": "17.4.0",
     "@angular-eslint/eslint-plugin": "17.4.0",
     "@angular-eslint/eslint-plugin-template": "17.4.0",
@@ -59,7 +61,10 @@
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ngrx/schematics": "^17.2.0",
+    "@nx/angular": "19.0.1",
+    "@nx/workspace": "19.0.1",
     "@parcel/watcher": "^2.4.1",
+    "@schematics/angular": "^17.3.6",
     "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.4",
     "@types/luxon": "^3.4.2",
@@ -82,6 +87,7 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nx": "19.0.1",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
