--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -29,15 +29,27 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
 
+      - name: Restore cached npm dependencies
+        uses: actions/cache/restore@v3
+        with:
+          path: |
+            node_modules
+            ~/.cache/Cypress # needed for the Cypress binary
+          key: npm-dependencies-${{ hashFiles('pnpm-lock.yaml') }}
+
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
+
+      - name: Cache npm dependencies
+        uses: actions/cache/save@v3
+        with:
+          path: |
+            node_modules
+            ~/.cache/Cypress # needed for the Cypress binary
+          key: npm-dependencies-${{ hashFiles('pnpm-lock.yaml') }}
 
       - name: Check formatting with Prettier
         run: pnpm lint:format
 
       - name: Lint by ESLint
         run: pnpm lint:eslint
-
-      # - uses: nrwl/nx-set-shas@v4
-      # - run: pnpm exec nx-cloud record -- nx format:check
-      # - run: pnpm exec nx affected -t lint test build
