--- a/package.json
+++ b/package.json
@@ -62,12 +62,19 @@
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ngrx/schematics": "^17.2.0",
     "@nx/angular": "19.0.1",
+    "@nx/jest": "19.0.1",
+    "@nx/js": "19.0.1",
     "@nx/workspace": "19.0.1",
     "@parcel/watcher": "^2.4.1",
     "@schematics/angular": "^17.3.6",
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
     "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.4",
+    "@types/jest": "^29.4.0",
     "@types/luxon": "^3.4.2",
+    "@types/node": "18.16.9",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
@@ -82,6 +89,9 @@
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-unused-imports": "^3.2.0",
     "jasmine-core": "~5.1.2",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-preset-angular": "~14.0.3",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
@@ -92,6 +102,8 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.4.5"
   },
   "config": {
