--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.7",
-    "@angular/cdk": "^17.3.7",
-    "@angular/common": "^17.3.7",
-    "@angular/compiler": "^17.3.7",
-    "@angular/core": "^17.3.7",
-    "@angular/forms": "^17.3.7",
-    "@angular/platform-browser": "^17.3.7",
-    "@angular/platform-browser-dynamic": "^17.3.7",
-    "@angular/router": "^17.3.7",
+    "@angular/animations": "^17.3.8",
+    "@angular/cdk": "^17.3.8",
+    "@angular/common": "^17.3.8",
+    "@angular/compiler": "^17.3.8",
+    "@angular/core": "^17.3.8",
+    "@angular/forms": "^17.3.8",
+    "@angular/platform-browser": "^17.3.8",
+    "@angular/platform-browser-dynamic": "^17.3.8",
+    "@angular/router": "^17.3.8",
     "@apollo/client": "^3.10.3",
     "@formkit/auto-animate": "^0.8.2",
-    "@ng-icons/core": "^27.3.1",
-    "@ng-icons/heroicons": "^27.3.1",
-    "@ng-icons/iconsax": "^27.3.1",
+    "@ng-icons/core": "^27.4.0",
+    "@ng-icons/heroicons": "^27.4.0",
+    "@ng-icons/iconsax": "^27.4.0",
     "@ngrx/effects": "^17.2.0",
     "@ngrx/entity": "^17.2.0",
     "@ngrx/operators": "^17.2.0",
@@ -46,16 +46,16 @@
     "zone.js": "~0.14.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.6",
-    "@angular-devkit/core": "^17.3.6",
-    "@angular-devkit/schematics": "^17.3.6",
+    "@angular-devkit/build-angular": "^17.3.7",
+    "@angular-devkit/core": "^17.3.7",
+    "@angular-devkit/schematics": "^17.3.7",
     "@angular-eslint/builder": "17.4.0",
     "@angular-eslint/eslint-plugin": "17.4.0",
     "@angular-eslint/eslint-plugin-template": "17.4.0",
     "@angular-eslint/schematics": "17.4.0",
     "@angular-eslint/template-parser": "17.4.0",
-    "@angular/cli": "^17.3.6",
-    "@angular/compiler-cli": "^17.3.7",
+    "@angular/cli": "^17.3.7",
+    "@angular/compiler-cli": "^17.3.8",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@graphql-codegen/cli": "5.0.2",
@@ -66,15 +66,15 @@
     "@nx/js": "19.0.1",
     "@nx/workspace": "19.0.1",
     "@parcel/watcher": "^2.4.1",
-    "@schematics/angular": "^17.3.6",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@schematics/angular": "^17.3.7",
+    "@swc-node/register": "^1.9.1",
+    "@swc/core": "^1.5.5",
+    "@swc/helpers": "^0.5.11",
     "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.4",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
-    "@types/node": "18.16.9",
+    "@types/node": "^20.12.11",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
@@ -89,9 +89,9 @@
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-unused-imports": "^3.2.0",
     "jasmine-core": "~5.1.2",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-preset-angular": "~14.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "~14.0.4",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
@@ -102,8 +102,8 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
   "config": {
