--- a/package.json
+++ b/package.json
@@ -61,10 +61,10 @@
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ngrx/schematics": "^17.2.0",
-    "@nx/angular": "19.0.1",
-    "@nx/jest": "19.0.1",
-    "@nx/js": "19.0.1",
-    "@nx/workspace": "19.0.1",
+    "@nx/angular": "19.0.2",
+    "@nx/jest": "19.0.2",
+    "@nx/js": "19.0.2",
+    "@nx/workspace": "19.0.2",
     "@parcel/watcher": "^2.4.1",
     "@schematics/angular": "^17.3.7",
     "@swc-node/register": "^1.9.1",
@@ -79,9 +79,11 @@
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "autoprefixer": "^10.4.19",
+    "babel-plugin-macros": "3.1.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.11.1",
+    "esbuild": "0.19.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -97,7 +99,7 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "nx": "19.0.1",
+    "nx": "19.0.2",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
