--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,9 +4,6 @@
     "esbenp.prettier-vscode",
     "cyrilletuzi.angular-schematics",
     "graphql.vscode-graphql",
-    "bradlc.vscode-tailwindcss",
-    "nrwl.angular-console",
-    "dbaeumer.vscode-eslint",
-    "firsttris.vscode-jest-runner"
+    "bradlc.vscode-tailwindcss"
   ]
 }
