--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.8",
-    "@angular/cdk": "^17.3.8",
-    "@angular/common": "^17.3.8",
-    "@angular/compiler": "^17.3.8",
-    "@angular/core": "^17.3.8",
-    "@angular/forms": "^17.3.8",
-    "@angular/platform-browser": "^17.3.8",
-    "@angular/platform-browser-dynamic": "^17.3.8",
-    "@angular/router": "^17.3.8",
-    "@apollo/client": "^3.10.3",
+    "@angular/animations": "^17.3.9",
+    "@angular/cdk": "^17.3.9",
+    "@angular/common": "^17.3.9",
+    "@angular/compiler": "^17.3.9",
+    "@angular/core": "^17.3.9",
+    "@angular/forms": "^17.3.9",
+    "@angular/platform-browser": "^17.3.9",
+    "@angular/platform-browser-dynamic": "^17.3.9",
+    "@angular/router": "^17.3.9",
+    "@apollo/client": "^3.10.4",
     "@formkit/auto-animate": "^0.8.2",
     "@ng-icons/core": "^27.4.0",
     "@ng-icons/heroicons": "^27.4.0",
@@ -49,26 +49,26 @@
     "@angular-devkit/build-angular": "^17.3.7",
     "@angular-devkit/core": "^17.3.7",
     "@angular-devkit/schematics": "^17.3.7",
-    "@angular-eslint/builder": "17.4.0",
-    "@angular-eslint/eslint-plugin": "17.4.0",
-    "@angular-eslint/eslint-plugin-template": "17.4.0",
-    "@angular-eslint/schematics": "17.4.0",
-    "@angular-eslint/template-parser": "17.4.0",
+    "@angular-eslint/builder": "^17.4.1",
+    "@angular-eslint/eslint-plugin": "^17.4.1",
+    "@angular-eslint/eslint-plugin-template": "^17.4.1",
+    "@angular-eslint/schematics": "^17.4.1",
+    "@angular-eslint/template-parser": "^17.4.1",
     "@angular/cli": "^17.3.7",
-    "@angular/compiler-cli": "^17.3.8",
+    "@angular/compiler-cli": "^17.3.9",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ngrx/schematics": "^17.2.0",
-    "@nx/angular": "19.0.3",
-    "@nx/jest": "19.0.3",
-    "@nx/js": "19.0.3",
-    "@nx/workspace": "19.0.3",
+    "@nx/angular": "19.0.4",
+    "@nx/jest": "19.0.4",
+    "@nx/js": "19.0.4",
+    "@nx/workspace": "19.0.4",
     "@parcel/watcher": "^2.4.1",
     "@schematics/angular": "^17.3.7",
     "@swc-node/register": "^1.9.1",
-    "@swc/core": "^1.5.6",
+    "@swc/core": "^1.5.7",
     "@swc/helpers": "^0.5.11",
     "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.4",
@@ -99,7 +99,7 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "nx": "19.0.3",
+    "nx": "19.0.4",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
