--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.10",
-    "@angular/cdk": "^17.3.10",
-    "@angular/common": "^17.3.10",
-    "@angular/compiler": "^17.3.10",
-    "@angular/core": "^17.3.10",
-    "@angular/forms": "^17.3.10",
-    "@angular/platform-browser": "^17.3.10",
-    "@angular/platform-browser-dynamic": "^17.3.10",
-    "@angular/router": "^17.3.10",
+    "@angular/animations": "18.0.0",
+    "@angular/cdk": "18.0.0",
+    "@angular/common": "18.0.0",
+    "@angular/compiler": "18.0.0",
+    "@angular/core": "18.0.0",
+    "@angular/forms": "18.0.0",
+    "@angular/platform-browser": "18.0.0",
+    "@angular/platform-browser-dynamic": "18.0.0",
+    "@angular/router": "18.0.0",
     "@apollo/client": "^3.10.4",
     "@formkit/auto-animate": "^0.8.2",
     "@ng-icons/core": "^27.4.0",
@@ -36,7 +36,7 @@
     "@ngrx/signals": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^17.2.0",
-    "apollo-angular": "^7.0.1",
+    "apollo-angular": "^7.0.2",
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.4.4",
@@ -47,27 +47,27 @@
     "zone.js": "~0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular-devkit/core": "^17.3.8",
-    "@angular-devkit/schematics": "^17.3.8",
-    "@angular-eslint/builder": "^17.5.0",
-    "@angular-eslint/eslint-plugin": "^17.5.0",
-    "@angular-eslint/eslint-plugin-template": "^17.5.0",
-    "@angular-eslint/schematics": "^17.5.0",
-    "@angular-eslint/template-parser": "^17.5.0",
-    "@angular/cli": "^17.3.8",
-    "@angular/compiler-cli": "^17.3.10",
+    "@angular-devkit/build-angular": "18.0.1",
+    "@angular-devkit/core": "18.0.1",
+    "@angular-devkit/schematics": "18.0.1",
+    "@angular-eslint/builder": "^17.5.1",
+    "@angular-eslint/eslint-plugin": "^17.5.1",
+    "@angular-eslint/eslint-plugin-template": "^17.5.1",
+    "@angular-eslint/schematics": "^17.5.1",
+    "@angular-eslint/template-parser": "^17.5.1",
+    "@angular/cli": "~18.0.1",
+    "@angular/compiler-cli": "18.0.0",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ngrx/schematics": "^17.2.0",
-    "@nx/angular": "19.0.4",
-    "@nx/jest": "19.0.4",
-    "@nx/js": "19.0.4",
-    "@nx/workspace": "19.0.4",
+    "@nx/angular": "19.1.0",
+    "@nx/jest": "19.1.0",
+    "@nx/js": "19.1.0",
+    "@nx/workspace": "19.1.0",
     "@parcel/watcher": "^2.4.1",
-    "@schematics/angular": "^17.3.8",
+    "@schematics/angular": "18.0.1",
     "@swc-node/register": "^1.9.1",
     "@swc/core": "^1.5.7",
     "@swc/helpers": "^0.5.11",
@@ -95,13 +95,13 @@
     "jasmine-core": "~5.1.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "~14.0.4",
+    "jest-preset-angular": "14.1.0",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "nx": "19.0.4",
+    "nx": "19.1.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
