--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.3",
   "scripts": {
     "ng": "ng",
-    "start": "nx serve",
-    "build": "nx build",
-    "watch": "nx build --watch --configuration development",
-    "test": "nx test",
-    "lint": "nx lint",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "lint": "ng lint",
     "lint:format": "prettier . --check",
-    "lint:eslint": "nx lint",
+    "lint:eslint": "ng lint",
     "format": "prettier . --write",
     "codegen": "graphql-codegen --config codegen.ts",
     "release": "commit-and-tag-version"
@@ -62,10 +62,6 @@
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ngrx/schematics": "^17.2.0",
-    "@nx/angular": "19.0.4",
-    "@nx/jest": "19.0.4",
-    "@nx/js": "19.0.4",
-    "@nx/workspace": "19.0.4",
     "@parcel/watcher": "^2.4.1",
     "@schematics/angular": "^17.3.7",
     "@swc-node/register": "^1.9.1",
@@ -101,7 +97,6 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "nx": "19.0.4",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
