--- a/package.json
+++ b/package.json
@@ -16,27 +16,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.9",
-    "@angular/cdk": "^17.3.9",
-    "@angular/common": "^17.3.9",
-    "@angular/compiler": "^17.3.9",
-    "@angular/core": "^17.3.9",
-    "@angular/forms": "^17.3.9",
-    "@angular/platform-browser": "^17.3.9",
-    "@angular/platform-browser-dynamic": "^17.3.9",
-    "@angular/router": "^17.3.9",
+    "@angular/animations": "^17.3.10",
+    "@angular/cdk": "^17.3.10",
+    "@angular/common": "^17.3.10",
+    "@angular/compiler": "^17.3.10",
+    "@angular/core": "^17.3.10",
+    "@angular/forms": "^17.3.10",
+    "@angular/platform-browser": "^17.3.10",
+    "@angular/platform-browser-dynamic": "^17.3.10",
+    "@angular/router": "^17.3.10",
     "@apollo/client": "^3.10.4",
     "@formkit/auto-animate": "^0.8.2",
-    "@ng-icons/core": "^27.4.0",
-    "@ng-icons/heroicons": "^27.4.0",
-    "@ng-icons/iconsax": "^27.4.0",
+    "@ng-icons/core": "^27.5.2",
+    "@ng-icons/heroicons": "^27.5.2",
+    "@ng-icons/iconsax": "^27.5.2",
     "@ngrx/effects": "^17.2.0",
     "@ngrx/entity": "^17.2.0",
     "@ngrx/operators": "^17.2.0",
     "@ngrx/signals": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^17.2.0",
-    "apollo-angular": "^7.0.1",
+    "apollo-angular": "^7.0.2",
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.4.4",
@@ -47,41 +47,40 @@
     "zone.js": "~0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.7",
-    "@angular-devkit/core": "^17.3.7",
-    "@angular-devkit/schematics": "^17.3.7",
-    "@angular-eslint/builder": "^17.4.1",
-    "@angular-eslint/eslint-plugin": "^17.4.1",
-    "@angular-eslint/eslint-plugin-template": "^17.4.1",
-    "@angular-eslint/schematics": "^17.4.1",
-    "@angular-eslint/template-parser": "^17.4.1",
-    "@angular/cli": "^17.3.7",
-    "@angular/compiler-cli": "^17.3.9",
+    "@angular-devkit/build-angular": "^17.3.8",
+    "@angular-devkit/core": "^17.3.8",
+    "@angular-devkit/schematics": "^17.3.8",
+    "@angular-eslint/builder": "^17.5.1",
+    "@angular-eslint/eslint-plugin": "^17.5.1",
+    "@angular-eslint/eslint-plugin-template": "^17.5.1",
+    "@angular-eslint/schematics": "^17.5.1",
+    "@angular-eslint/template-parser": "^17.5.1",
+    "@angular/cli": "^17.3.8",
+    "@angular/compiler-cli": "^17.3.10",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ngrx/schematics": "^17.2.0",
     "@parcel/watcher": "^2.4.1",
-    "@schematics/angular": "^17.3.7",
+    "@schematics/angular": "^17.3.8",
     "@swc-node/register": "^1.9.1",
     "@swc/core": "^1.5.7",
     "@swc/helpers": "^0.5.11",
     "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.4",
-    "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.12.12",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "autoprefixer": "^10.4.19",
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.4.1",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.11.1",
-    "esbuild": "0.19.2",
+    "esbuild": "^0.19.12",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -89,9 +88,6 @@
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-unused-imports": "^3.2.0",
     "jasmine-core": "~5.1.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "~14.0.4",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
@@ -101,7 +97,6 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
