--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "ngx-markdown": "^18.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.3",
-    "uuid": "^9.0.1",
-    "zone.js": "~0.14.6"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.2",
