--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.1",
-    "@angular/cdk": "^18.0.1",
-    "@angular/common": "^18.0.1",
-    "@angular/compiler": "^18.0.1",
-    "@angular/core": "^18.0.1",
-    "@angular/forms": "^18.0.1",
-    "@angular/platform-browser": "^18.0.1",
-    "@angular/platform-browser-dynamic": "^18.0.1",
-    "@angular/router": "^18.0.1",
+    "@angular/animations": "^18.0.2",
+    "@angular/cdk": "^18.0.2",
+    "@angular/common": "^18.0.2",
+    "@angular/compiler": "^18.0.2",
+    "@angular/core": "^18.0.2",
+    "@angular/forms": "^18.0.2",
+    "@angular/platform-browser": "^18.0.2",
+    "@angular/platform-browser-dynamic": "^18.0.2",
+    "@angular/router": "^18.0.2",
     "@apollo/client": "^3.10.4",
     "@formkit/auto-animate": "^0.8.2",
-    "@ng-icons/core": "^27.5.2",
-    "@ng-icons/heroicons": "^27.5.2",
-    "@ng-icons/iconsax": "^27.5.2",
+    "@ng-icons/core": "^28.0.0",
+    "@ng-icons/heroicons": "^28.0.0",
+    "@ng-icons/iconsax": "^28.0.0",
     "@ngrx/effects": "^17.2.0",
     "@ngrx/entity": "^17.2.0",
     "@ngrx/operators": "^17.2.0",
@@ -46,23 +46,24 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.2",
-    "@angular-devkit/core": "^18.0.2",
-    "@angular-devkit/schematics": "^18.0.2",
+    "@angular-devkit/build-angular": "^18.0.3",
+    "@angular-devkit/core": "^18.0.3",
+    "@angular-devkit/schematics": "^18.0.3",
     "@angular-eslint/builder": "^18.0.1",
     "@angular-eslint/eslint-plugin": "^18.0.1",
     "@angular-eslint/eslint-plugin-template": "^18.0.1",
     "@angular-eslint/schematics": "^18.0.1",
     "@angular-eslint/template-parser": "^18.0.1",
-    "@angular/cli": "^18.0.2",
-    "@angular/compiler-cli": "^18.0.1",
+    "@angular/cli": "^18.0.3",
+    "@angular/compiler-cli": "^18.0.2",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ngrx/schematics": "^17.2.0",
     "@parcel/watcher": "^2.4.1",
-    "@schematics/angular": "^18.0.2",
+    "@schematics/angular": "^18.0.3",
+    "@swc/types": "^0.1.7",
     "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.4",
     "@types/luxon": "^3.4.2",
@@ -92,7 +93,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
     "prettier-plugin-tailwindcss": "^0.6.1",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
