--- a/package.json
+++ b/package.json
@@ -16,68 +16,68 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.6",
-    "@angular/cdk": "^18.0.6",
-    "@angular/common": "^18.0.6",
-    "@angular/compiler": "^18.0.6",
-    "@angular/core": "^18.0.6",
-    "@angular/forms": "^18.0.6",
-    "@angular/platform-browser": "^18.0.6",
-    "@angular/platform-browser-dynamic": "^18.0.6",
-    "@angular/router": "^18.0.6",
-    "@apollo/client": "^3.10.8",
+    "@angular/animations": "^18.2.0",
+    "@angular/cdk": "^18.2.0",
+    "@angular/common": "^18.2.0",
+    "@angular/compiler": "^18.2.0",
+    "@angular/core": "^18.2.0",
+    "@angular/forms": "^18.2.0",
+    "@angular/platform-browser": "^18.2.0",
+    "@angular/platform-browser-dynamic": "^18.2.0",
+    "@angular/router": "^18.2.0",
+    "@apollo/client": "^3.11.4",
     "@formkit/auto-animate": "^0.8.2",
-    "@ng-icons/core": "^28.1.0",
-    "@ng-icons/heroicons": "^28.1.0",
-    "@ng-icons/iconsax": "^28.1.0",
-    "@ngrx/effects": "^18.0.1",
-    "@ngrx/entity": "^18.0.1",
-    "@ngrx/operators": "^18.0.1",
-    "@ngrx/signals": "18.0.0-rc.2",
-    "@ngrx/store": "^18.0.1",
-    "@ngrx/store-devtools": "^18.0.1",
-    "apollo-angular": "^7.0.2",
+    "@ng-icons/core": "^29.5.0",
+    "@ng-icons/heroicons": "^29.5.0",
+    "@ng-icons/iconsax": "^29.5.0",
+    "@ngrx/effects": "^18.0.2",
+    "@ngrx/entity": "^18.0.2",
+    "@ngrx/operators": "^18.0.2",
+    "@ngrx/signals": "^18.0.2",
+    "@ngrx/store": "^18.0.2",
+    "@ngrx/store-devtools": "^18.0.2",
+    "apollo-angular": "^7.1.2",
     "graphql": "^16.9.0",
     "jwt-decode": "^4.0.0",
-    "luxon": "^3.4.4",
+    "luxon": "^3.5.0",
     "ngx-markdown": "^18.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.7",
-    "@angular-devkit/core": "^18.0.7",
-    "@angular-devkit/schematics": "^18.0.7",
-    "@angular-eslint/builder": "^18.1.0",
-    "@angular-eslint/eslint-plugin": "^18.1.0",
-    "@angular-eslint/eslint-plugin-template": "^18.1.0",
-    "@angular-eslint/schematics": "^18.1.0",
-    "@angular-eslint/template-parser": "^18.1.0",
-    "@angular/cli": "^18.0.7",
-    "@angular/compiler-cli": "^18.0.6",
-    "@commitlint/cli": "^19.3.0",
+    "@angular-devkit/build-angular": "^18.2.0",
+    "@angular-devkit/core": "^18.2.0",
+    "@angular-devkit/schematics": "^18.2.0",
+    "@angular-eslint/builder": "^18.3.0",
+    "@angular-eslint/eslint-plugin": "^18.3.0",
+    "@angular-eslint/eslint-plugin-template": "^18.3.0",
+    "@angular-eslint/schematics": "^18.3.0",
+    "@angular-eslint/template-parser": "^18.3.0",
+    "@angular/cli": "^18.2.0",
+    "@angular/compiler-cli": "^18.2.0",
+    "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
-    "@ngrx/schematics": "^18.0.1",
+    "@ngrx/schematics": "^18.0.2",
     "@parcel/watcher": "^2.4.1",
-    "@schematics/angular": "^18.0.7",
-    "@swc/types": "^0.1.9",
+    "@schematics/angular": "^18.2.0",
+    "@swc/types": "^0.1.12",
     "@types/google.accounts": "^0.0.14",
     "@types/jasmine": "~5.1.4",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.16.1",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "autoprefixer": "^10.4.19",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "autoprefixer": "^10.4.20",
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.4.1",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.12.10",
-    "esbuild": "^0.19.12",
+    "esbuild": "^0.23.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -85,15 +85,15 @@
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-unused-imports": "^3.2.0",
     "jasmine-core": "~5.1.2",
-    "karma": "~6.4.3",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.4",
+    "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
