--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "graphql": "^16.9.0",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.5.0",
-    "marked": "^12.0.2",
     "ngx-markdown": "^18.1.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.8.0",
@@ -49,11 +48,11 @@
     "@angular-devkit/build-angular": "^18.2.9",
     "@angular-devkit/core": "^18.2.9",
     "@angular-devkit/schematics": "^18.2.9",
-    "@angular-eslint/builder": "^18.3.1",
-    "@angular-eslint/eslint-plugin": "^18.3.1",
-    "@angular-eslint/eslint-plugin-template": "^18.3.1",
-    "@angular-eslint/schematics": "^18.3.1",
-    "@angular-eslint/template-parser": "^18.3.1",
+    "@angular-eslint/builder": "^18.4.0",
+    "@angular-eslint/eslint-plugin": "^18.4.0",
+    "@angular-eslint/eslint-plugin-template": "^18.4.0",
+    "@angular-eslint/schematics": "^18.4.0",
+    "@angular-eslint/template-parser": "^18.4.0",
     "@angular/cli": "^18.2.9",
     "@angular/compiler-cli": "^18.2.8",
     "@commitlint/cli": "^19.5.0",
@@ -66,10 +65,10 @@
     "@swc/types": "^0.1.12",
     "@types/google.accounts": "^0.0.15",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.16.13",
+    "@types/node": "^22.7.8",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.5.0",
@@ -77,18 +76,17 @@
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.12.13",
     "esbuild": "^0.24.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-sonarjs": "^0.25.1",
-    "eslint-plugin-unused-imports": "^3.2.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "marked": "12.0.2",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
-    "typescript": "~5.4.5",
+    "typescript": "~5.5.4",
     "zone.js": "~0.14.10"
   },
   "config": {
