--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@graphql-codegen/cli": "5.0.3",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@ngrx/schematics": "^18.1.0",
     "@parcel/watcher": "^2.4.1",
     "@schematics/angular": "^18.2.9",
