ci: add plugin for remove unused imports

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -11,7 +11,8 @@
   "endOfLine": "lf",
   "plugins": [
     "prettier-plugin-tailwindcss",
-    "@ianvs/prettier-plugin-sort-imports"
+    "@ianvs/prettier-plugin-sort-imports",
+    "prettier-plugin-organize-imports"
   ],
   "importOrder": [
     "<BUILTIN_MODULES>",
