--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
