refactor: refactor auth ( again and again)

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,11 @@
             "polyfills": [],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/silent-refresh.html"
+            ],
             "styles": [
               "src/styles.scss",
               "node_modules/vanilla-cookieconsent/dist/cookieconsent.css"
