--wip-- [skip ci]

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ngrx/store": "^19.0.1",
     "@ngrx/store-devtools": "^19.0.1",
     "@sentry/angular": "^9.1.0",
+    "@tailwindcss/postcss": "^4.0.6",
     "animate.css": "^4.1.1",
     "apollo-angular": "^8.0.2",
     "apollo-upload-client": "^18.0.1",
@@ -90,7 +91,7 @@
     "commitizen": "^4.3.1",
     "cypress": "^14.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "daisyui": "^4.12.23",
+    "daisyui": "^5.0.0-beta.8",
     "esbuild": "^0.25.0",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
@@ -101,7 +102,7 @@
     "prettier": "^3.5.1",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.6",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.24.0",
