refactor: replace huge icons by phosphor

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@apollo/client": "^3.13.6",
     "@formkit/auto-animate": "^0.8.2",
     "@ng-icons/core": "^31.2.0",
-    "@ng-icons/huge-icons": "^31.2.0",
     "@ng-icons/iconsax": "^31.2.0",
+    "@ng-icons/phosphor-icons": "^31.2.0",
     "@ngrx/effects": "^19.1.0",
     "@ngrx/entity": "^19.1.0",
     "@ngrx/operators": "^19.1.0",
@@ -93,7 +93,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^5.0.12",
     "esbuild": "^0.25.2",
-    "eslint": "^9.23.0",
+    "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.2",
